# NeCA

./: .gitignore  README.md  main.py  pyproject.toml  sync.sh  train.py  train_for_eval.py  visualize.py  visualize_pointclouds.py
config/: CCTA.yaml
src/: eval_trainer.py  trainer.py
src/dataset/: tigre.py
src/encoder/hashencoder/src/: hashencoder.cu
src/render/: ct_geometry_projector.py
