[project]
name = "neca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astra-toolbox>=2.2.0",
    "connected-components-3d>=3.24.0",
    "matplotlib>=3.8.4",
    "ninja==1.11.1",
    "numpy==1.21.6",
    "odl>=0.8.1",
    "pandas>=1.5.1",
    "plotly>=6.3.0",
    "pyyaml==6.0",
    "scikit-image>=0.21.0",
    "scipy>=1.11.4",
    "six>=1.17.0",
    "tensorboard>=2.20.0",
    "torch==2.6.0",
    "tqdm>=4.67.1",
]
